[b][color=orange]v4.38[/color], 06.12.2019[/b][list]
[*]Small Tweaks to the DPS Layout.
[*]Added a chat fade feature. Thanks to fgprodigal <3
[*]Added right click function to my RaidManager to open RaidPanel.
[*]Hide Coords will now also hide the Backdrop fron the LocPanel Coords.
[*]Added Color Option to GCD/Swing-Bar.
[*]Added wowhead links on World Frame & Achievement Frame.
[*]Added a System DashBoard to show FPS, MS and control Volume.[/list]


[b][color=orange]v4.37[/color], 26.11.2019[/b][list]
[*]DPS LAYOUT UPDATE: If you want it, do the install process again!!
[*]Added some animated stuff to gossip/quest frames.
[*]Updated Heal Prediction.
[*]Updated GCD Bar (disabled by default).
[*]Added a Swing Bar (disabled by default).
[*]AutoButtons can now use the Global Fade Transparency.
[*]Options cleanup.[/list]


[b][color=orange]v4.36[/color], 14.11.2019[/b][list]
[*]Changed some settings via install, which is now needed with the upcoming ElvUI update.
[*]Removed DBM skin. You can still get my style via AddOnSkins.
[*]Disable my Heal Prediction by default. Must figure out, why it dont work for some people.[/list]


[b][color=orange]v4.35[/color], 12.11.2019[/b][list]
[*]Removed the compatibility checks, i don't want to deal with it.[/list]


[b][color=orange]v4.34a[/color], 10.11.2019[/b][list]
[*]Don't load my Armory if S&L is loaded. For now.[/list]


[b][color=orange]v4.34[/color], 10.11.2019[/b][list]
[*]Fix some errors if you are using dual profiles. Thanks to fgprodigal <3
[*]Changed my MicroBar Tooltip instance lockout.
[*]Fixed my Clique Skin, it newer worked. lol
[*]Removed CleanBossButton Code, its now default in ElvUI.
[*]Tweak a bit the RaidManager Code.
[*]Added an own glow for Actionbar procs.
[*]Added my Tags to the Available Tags option in ElvUI.
[*]Updated Minimap Buttons, the Buttons will now stay visible, if you click them.
[*]Added an "Undress Button" to the DressUpFrame.
[*]Removed the Aura Icon Spacing code for the UnitFrames.