@@ -1,3 +1,12 @@
+** v4.39, 18.12.2019**
+* Added styles on UnitFrames i missed.
+* The DashBoard is now disabled by default.
+* Updated skins.
+* Fixed RaidCD font option.
+* Added two buttons on the Talent Frame with Codex and Tome Items.
+* Fixed an install error.
+
+
 ** v4.38, 06.12.2019**
 * Small Tweaks to the DPS Layout.
 * Added a chat fade feature. Thanks to fgprodigal <3
